--- a/frontend/src/components/Stat/styles.css
+++ b/frontend/src/components/Stat/styles.css
@@ -1,19 +1,30 @@
 div.sub-box {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #ffffff;
   flex: 1;
   margin: 10px;
   border: solid;
   border-width: 1px;
-  border-color: red;
-  /* width: 100%; */
+  border-color: #ffffff;
+  border-radius: 10px;
   height: 120px;
-  /* max-width: 260px; */
-  /* max-width: 50%; */
   min-width: 280px;
-  /* min-height: 120px; */
 }
 
-p {
-  font-family: Arial, Helvetica, sans-serif;
-  color: #ffffff;
-  font-size: 18px;
+div.sub-box ul {
+  list-style-type: none;
+  margin-left: 5px;
+}
+
+div.sub-box li {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+div.sub-box h1 {
+  margin-top: 5px;
+  font-size: 16px;
+  text-align: center;
+  align-self: center;
 }
