--- a/frontend/src/components/AddHost/styles.css
+++ b/frontend/src/components/AddHost/styles.css
@@ -1,7 +1,7 @@
 div#form-container h1 {
   font-size: 20px;
   color: #ffffff;
-  margin: 5px;
+  margin: 10px;
 }
 
 div#form-container input {
@@ -9,4 +9,15 @@ div#form-container input {
   border-color: #c9c9c9;
   padding: 5px;
   border-radius: 5px;
+}
+
+input#submitArrow {
+  color: #ffffff;
+  margin-left: 10px;
+  width: 60px;
+  height: 30px;
+  border-radius: 20px;
+  background-color: #483673;
+  border-color: #7e6c91;
+  border-style: solid;
 }
